# EMCore3D

./: .clang-tidy  .gitignore  CMakeLists.txt  OPENGL_ABSTRACTION.md  README.md  example_visualization.cpp  main.cpp  test_opengl.cpp
.cache/clangd/index/: allocator.cpp.794BCACB55F11A63.idx  allocator.cpp.A9FE1DBBB494A01D.idx  buffer.cpp.E52196B1C3A2F74D.idx  buffer.hpp.5577AE8C333FB436.idx  constants.h.33C4BFA70A069D19.idx  constants.hpp.520B44A48FECDB63.idx  emfdtd.h.02FD64B8AE0F3F2C.idx  emftdt.cpp.72F66ED157E4AEC8.idx  file_input.cpp.47057D0A0A51A6B1.idx  file_input.cpp.B6F1D8653A8E359A.idx  file_output.cpp.AD1F7D73CEB9E097.idx  file_output.cpp.BA2F8FBB50994F9A.idx  file_output.cpp.FE2A4E306C3C71EC.idx  file_output.h.B689042F6B2400A2.idx  file_system.cpp.702B41E3C5EC4E6A.idx  file_system.cpp.92EE38F33C9FB570.idx  file_system.cpp.E6543B626CDEA96D.idx  file_system.h.05EA1FCC75B8586F.idx  file_system.h.8936B3EBDF1D4952.idx  file_system.hpp.2EB1A231B9654886.idx  gl_context.cpp.B65CA720ACC6DB0A.idx  gl_context.hpp.9F46E632B0649615.idx  grid.cpp.EFFD6B5C9108EDD4.idx  grid.hpp.F9EAEC7DF9ADA7BE.idx  io.cpp.F5D376046DF6EEAF.idx  io.h.6159F6A4722D0002.idx  main.cpp.39F716B2EC90F9E8.idx  main.cpp.46A69DAB633CE777.idx  math_utils.hpp.57F84D2B83563988.idx  memory_utils.cpp.2A78AFB2DC51A993.idx  memory_utils.hpp.79904D9CEFFDC7C2.idx  naive_update.cpp.33A426864E695259.idx  naive_update.cpp.3B49393B5B8134A8.idx  particle_group.cpp.4C8FC5B5A00AA180.idx  particle_group.h.F129FAD9521BCF98.idx  renderer.cpp.6C86568605DF5DFB.idx  renderer.hpp.DCE2B6ECD40771CD.idx  shader.cpp.2862F681161C520E.idx  shader.hpp.F6692EBCA98CCE1A.idx  simulation.cpp.DE2C5553FA12D654.idx  (+7 more)
.github/workflows/: ci.yml
config/: constants.h
include/app/: simulation.hpp
include/common/: constants.hpp  memory_utils.hpp  spdlog_init.hpp  types.hpp
include/io/: file_system.hpp
include/render/: buffer.hpp  field_visualizer.hpp  gl_context.hpp  math_utils.hpp  renderer.hpp  scalar_field.hpp  shader.hpp
include/yee/: grid.hpp
scripts/: build.sh  clang-tidy.sh  ssh_send.sh
shaders/: field_fragment.glsl  field_vertex.glsl
src/: main.cpp
src/IO/: CSVLogger.h  VTKWriter.h  file_input.h  file_output.cpp  file_output.h  file_system.cpp  file_system.h  io.cpp  io.h
src/Render/: spline.h  splineExtractor.cpp
src/Simulation/: constants.h  emfdtd.h  emftdt.cpp
src/Simulation/Grid/: gridAllocator.cpp  yeeGrid.cpp  yeeGrid.h  yeeUpdate.cpp  yeeUpdateSIMD.cpp
src/Simulation/grid/: grid_allocator.cpp  grid_update_naive.cpp  yee_grid.cpp  yee_grid.h
src/YeeGrid/: grid_allocator.cpp  yee_grid.cpp  yee_grid.h
src/app/: simulation.cpp
src/common/: constants.h  memory_utils.cpp  spdlog_init.cpp
src/emfdtd/: emfdtd.h  emftdt.cpp
src/emfdtd/grid/: allocator.cpp  naive_update.cpp  yee_grid.cpp  yee_grid.h
src/io/: file_output.cpp  file_system.cpp
src/render/: buffer.cpp  field_visualizer.cpp  gl_context.cpp  renderer.cpp  scalarField.h  shader.cpp  spline.h
src/render/particle_backend/: particle_group.cpp  particle_group.h
src/yee/: allocator.cpp  grid.cpp  naive_update.cpp
tests/: test_io.cpp
